--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -143,7 +143,7 @@ jobs:
     environment: PRODUCTION
     runs-on: ubuntu-latest
     needs: build
-    if: github.event.pull_request.merged == true && github.ref == 'refs/heads/main'
+    if: github.ref == 'refs/heads/main'
 
     steps:
       - name: Download Artifact
